openapi/docs/v2/docs/InputFormField.md
# InputFormField


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**id** | **str** |  | [optional] 
**type** | **str** |  | [optional] 
**label** | **str** |  | [optional] 
**min_values** | **int** |  | [optional] 
**max_values** | **int** |  | [optional] 
**min_max_values_message** | **str** |  | [optional] 
**help_text** | **str** |  | [optional] 
**place_holder_text** | **str** |  | [optional] 
**values** | **[str]** |  | [optional] 
**data_values** | [**[InputFormWithExternalData]**](InputFormWithExternalData.md) |  | [optional] 
**group_values** | [**[InputFormGroupFieldValues]**](InputFormGroupFieldValues.md) |  | [optional] 
**min_length** | **int** |  | [optional] 
**max_length** | **int** |  | [optional] 
**min** | **float** |  | [optional] 
**max** | **float** |  | [optional] 
**choices** | [**[InputFormFieldChoice]**](InputFormFieldChoice.md) |  | [optional] 
**fields** | [**[InputFormGroupField]**](InputFormGroupField.md) |  | [optional] 
**data_filter** | [**InputFormFieldDataFilter**](InputFormFieldDataFilter.md) |  | [optional] 
**regex** | **str** |  | [optional] 
**regex_error_message** | **str** |  | [optional] 
**hidden** | **bool** |  | [optional] 
**disabled** | **bool** |  | [optional] 
**empty_values_allowed** | **bool** |  | [optional] 
**update_render_on_change** | **bool** |  | [optional] 
**sensitive** | **bool** |  | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


